--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,16 @@
   text-align: center;
   align-items: center;
   width: 100%;
-  background-color: rgb(200, 210, 210);
+  background-color: rgb(134, 235, 235);
+}
+.card h3{
+  color: rgb(15, 10, 10);
+  margin-bottom: 10px;
+  font-size: 19px;
+}
+.card p{
+  font-size: 20px;
+  margin-bottom: 5px;
 }
 .name {
   border-radius: 10px;
@@ -25,6 +34,10 @@
 .date:focus {
   outline: none;
   border: none;
+}
+.form {
+  margin-top: 20px;
+  border-radius: 20px;
 }
 .button {
   background-color: white;
@@ -68,6 +81,8 @@ ul {
   margin-top: 20px;
 }
 .btnClear {
+  border-radius: 10px;
+  background-color: white;
   margin-top: 5px;
   padding: 5px 10px;
   border: none;
@@ -80,6 +95,8 @@ ul {
   color: white;
 }
 .btnSearch {
+  cursor: pointer;
+  font-size: 15px;
   margin-left: 7px;
   padding: 10px;
   border: none;
@@ -101,11 +118,6 @@ ul {
   .cards {
     flex-direction: column;
     align-items: center;
-  }
-
-  .card {
-    width: 90%;
-    margin-bottom: 15px;
   }
 }
 
